--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,181 +1,263 @@
 <?xml version="1.0" encoding="utf-8"?>
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+xmlns:tools="http://schemas.android.com/tools"
+android:layout_width="match_parent"
+android:layout_height="match_parent"
+android:background="@drawable/login_page_background"
+xmlns:app="http://schemas.android.com/apk/res-auto">
 
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".MainActivity"
-    android:background="@drawable/login_page_background"
-    >
-    <LinearLayout
+<androidx.constraintlayout.widget.Guideline
+    android:id="@+id/guidelineTop"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:orientation="horizontal"
+    app:layout_constraintGuide_percent="0.3" />
 
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        >
+<androidx.constraintlayout.widget.Guideline
+    android:id="@+id/guidelineLeft"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+    app:layout_constraintGuide_percent="0.08" />
 
+<androidx.constraintlayout.widget.Guideline
+    android:id="@+id/guidelineRight"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+    app:layout_constraintGuide_percent="0.92" />
+
+<androidx.constraintlayout.widget.Guideline
+    android:id="@+id/guidelineBottom"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:orientation="horizontal"
+    app:layout_constraintGuide_percent="1.0" />
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/consraintLayoutLoginView"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/guidelineBottom"
+        app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
+        app:layout_constraintTop_toTopOf="@+id/guidelineTop"
+        app:layout_constraintVertical_bias="0.6">
 
         <ImageView
-            android:padding="16dp"
-            android:id="@+id/imageView"
-            android:layout_width="match_parent"
-            android:layout_height="140dp"
-            android:layout_marginTop="48dp"
-            android:layout_marginBottom="8dp"
-            app:srcCompat="@drawable/login_page_image" />
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_gravity="center"
-            android:layout_marginTop="80dp"
-            >
-            <ImageView
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:id="@+id/gif"
-                android:src="@drawable/loader"
-                android:layout_centerHorizontal="true"
-                android:layout_centerVertical="true"
-                />
-        </RelativeLayout>
-<ScrollView
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:fillViewport="true">
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
+            android:id="@+id/gif"
+            android:layout_width="72dp"
+            android:layout_height="72dp"
+            android:layout_marginBottom="24dp"
+            app:layout_constraintBottom_toTopOf="@+id/frameLayout"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="1.0"
+            app:srcCompat="@drawable/loader" />
 
         <androidx.cardview.widget.CardView
-            android:elevation="8dp"
-            android:id="@+id/cardView"
+            android:id="@+id/frameLayout"
             android:layout_width="match_parent"
-            android:layout_height="240dp"
-            android:layout_marginLeft="24dp"
-            android:layout_marginRight="24dp"
-            android:layout_marginTop="30dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:background="@color/igniteSecondary"
 
-            app:cardCornerRadius="12dp"
-            android:layout_centerHorizontal="true"
-            android:shape="rectangle"
-            >
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.82">
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginTop="8dp"
-                app:layout_constraintTop_toTopOf="parent"
-
-                >
+                android:background="@color/igniteSecondary">
 
                 <Button
-                    android:id="@+id/sign_in_button"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="8dp"
-                    android:background="@color/igniteSecondaryDark"
 
-                    android:elevation="6dp"
-                    android:padding="16dp"
-                    android:text="SIGN IN"
-                    android:textColor="@color/lightgray"
-                    android:transitionName="@string/my_shared_button_transition"
-                    app:layout_constraintBottom_toBottomOf="parent"
+                    android:id="@+id/sign_in_button"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="24dp"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginEnd="24dp"
+                    android:layout_marginBottom="8dp"
+                    android:background="@drawable/button_shape"
+                    android:text="Login"
+                    android:textColor="@color/contrasText"
+                    app:layout_constraintBottom_toTopOf="@+id/guidelineLoginView4"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/materialTextInputLayout2" />
+                    app:layout_constraintTop_toTopOf="@+id/guidelineLoginView3" />
 
+
+                <ImageView
+                    android:id="@+id/imageView2"
+                    android:layout_width="56dp"
+                    android:layout_height="56dp"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginBottom="12dp"
+                    app:layout_constraintBottom_toTopOf="@+id/guidelineLoginView1"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:srcCompat="@drawable/ic_fire" />
+
+
+                <androidx.constraintlayout.widget.Guideline
+                    android:id="@+id/guidelineLoginView4"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    app:layout_constraintGuide_percent="0.9" />
+
+
+                <androidx.constraintlayout.widget.Guideline
+                    android:id="@+id/guidelineLoginView1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    app:layout_constraintGuide_percent="0.2" />
+
+                <androidx.constraintlayout.widget.Guideline
+                    android:id="@+id/guidelineLoginView2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    app:layout_constraintGuide_percent="0.4" />
+
+                <androidx.constraintlayout.widget.Guideline
+                    android:id="@+id/guidelineLoginView3"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    app:layout_constraintGuide_percent="0.6" />
 
                 <me.zhanghai.android.materialedittext.MaterialTextInputLayout
-                    android:id="@+id/materialTextInputLayout"
-                    android:layout_width="match_parent"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_margin="20dp"
                     android:layout_marginStart="8dp"
                     android:layout_marginTop="8dp"
                     android:layout_marginEnd="8dp"
+
+                    app:layout_constraintBottom_toTopOf="@+id/guidelineLoginView3"
                     app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="1.0"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent">
-
-                    <me.zhanghai.android.materialedittext.MaterialEditText
-                        android:id="@+id/username_editText"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:hint="Username"
-                        android:inputType="textPersonName"
-                        android:singleLine="true">
-
-                    </me.zhanghai.android.materialedittext.MaterialEditText>
-
-                </me.zhanghai.android.materialedittext.MaterialTextInputLayout>
-
-                <me.zhanghai.android.materialedittext.MaterialTextInputLayout
-                    android:id="@+id/materialTextInputLayout2"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="20dp"
-                    app:layout_constraintEnd_toEndOf="@+id/materialTextInputLayout"
-                    app:layout_constraintStart_toStartOf="@+id/materialTextInputLayout"
-                    app:layout_constraintTop_toBottomOf="@+id/materialTextInputLayout">
+                    app:layout_constraintTop_toBottomOf="@+id/xx">
 
                     <me.zhanghai.android.materialedittext.MaterialEditText
                         android:id="@+id/password_editText"
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent"
+                        android:layout_height="wrap_content"
                         android:hint="Password"
+                        android:imeOptions="actionDone"
                         android:inputType="textPassword"
-                        android:singleLine="true">
-
-                    </me.zhanghai.android.materialedittext.MaterialEditText>
+                        android:maxLines="1"
+                        android:textColor="@color/contrasText"
+                     android:textColorHint="@color/contrasText"
+                        android:textSize="20sp" />
 
                 </me.zhanghai.android.materialedittext.MaterialTextInputLayout>
 
-                <!--<me.zhanghai.android.materialedittext.MaterialEditText
-                    android:id="@+id/username_editText"
+                <me.zhanghai.android.materialedittext.MaterialTextInputLayout
+                    android:id="@+id/xx"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="56dp"
-                    android:layout_marginEnd="56dp"
-                    android:layout_marginBottom="16dp"
-                    android:backgroundTint="#FFFFFF"
-                    android:ems="10"
-                    android:hint="username"
-                    android:inputType="textPersonName"
-                    android:textColor="#FFFFFF"
-                    android:textColorHint="#FFFFFF"
-                    app:layout_constraintBottom_toTopOf="@+id/password_editText"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginEnd="8dp"
+                    app:layout_constraintBottom_toTopOf="@+id/guidelineLoginView2"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent" /> -->
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="@+id/guidelineLoginView1">
 
-                <!--
+                    <me.zhanghai.android.materialedittext.MaterialEditText
+                        android:id="@+id/username_editText"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:hint="Username"
+                        android:inputType="textPersonName"
+                        android:maxLines="1"
+                        android:textColor="@color/contrasText"
+                        android:textColorHint="@color/contrasText"
+                        android:textSize="20sp" />
 
-                <me.zhanghai.android.materialedittext.MaterialEditText
-                    android:id="@+id/password_editText"
-                    android:layout_width="0dp"
-
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="24dp"
-                    android:backgroundTint="#FFFFFF"
-                    android:ems="10"
-                    android:hint="password"
-                    android:inputType="textPassword"
-                    android:textColor="#FFFFFF"
-                    android:textColorHint="#FFFFFF"
-                    app:layout_constraintBottom_toTopOf="@+id/sign_in_button"
-                    app:layout_constraintEnd_toEndOf="@+id/username_editText"
-                    app:layout_constraintHorizontal_bias="0.0"
-                    app:layout_constraintStart_toStartOf="@+id/username_editText" />-->
-
+                </me.zhanghai.android.materialedittext.MaterialTextInputLayout>
 
             </androidx.constraintlayout.widget.ConstraintLayout>
-
         </androidx.cardview.widget.CardView>
-    </androidx.constraintlayout.widget.ConstraintLayout>
-</ScrollView>
 
-    </LinearLayout>
-</ScrollView>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+<ImageView
+    android:id="@+id/imageView"
+    android:layout_width="0dp"
+    android:layout_height="96dp"
+    android:layout_marginBottom="8dp"
+    app:layout_constraintBottom_toTopOf="@+id/consraintLayoutLoginView"
+    app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
+    app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
+    app:srcCompat="@drawable/login_page_image" />
+</androidx.constraintlayout.widget.ConstraintLayout>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
