--- a/app/src/main/res/layout/fragment_contact_us.xml
+++ b/app/src/main/res/layout/fragment_contact_us.xml
@@ -45,7 +45,7 @@
                         android:layout_height="wrap_content"
                         android:gravity="center"
                         android:text="Faculty Coordinators"
-                        android:textSize="20dp"
+                        android:textSize="20sp"
                         android:textStyle="bold"
                         android:layout_marginTop="10dp"
                         />
@@ -81,14 +81,15 @@
                             <LinearLayout
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:layout_margin="15dp"
+                                android:layout_margin="5dp"
                                 android:orientation="vertical">
 
                                 <com.mikhaellopez.circularimageview.CircularImageView
                                     android:layout_width="90dp"
                                     android:layout_height="90dp"
-                                    android:src="@drawable/my"
+                                    android:src="@drawable/jagannathnayak"
                                     app:civ_shadow="true"
+                                    android:layout_marginLeft="15dp"
                                     app:civ_shadow_color="#3f51b5"
 
                                     />
@@ -96,10 +97,20 @@
                                 <TextView
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
-                                    android:layout_marginLeft="23dp"
-                                    android:text="Faculty 1"
+                                    android:layout_marginLeft="0dp"
+                                    android:text="Prof. Jagannath Nayak"
                                     android:textColor="@color/contrasText"
                                     android:textStyle="bold"
+
+                                    />
+                                <TextView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:layout_marginLeft="30dp"
+                                    android:text="Dean (SW)"
+                                    android:textAlignment="center"
+                                    android:textColor="@color/contrasText"
+
 
                                     />
 
@@ -110,7 +121,7 @@
                             <LinearLayout
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:layout_margin="15dp"
+                                android:layout_margin="5dp"
                                 android:orientation="vertical"
 
                                 >
@@ -118,21 +129,31 @@
                                 <com.mikhaellopez.circularimageview.CircularImageView
                                     android:layout_width="90dp"
                                     android:layout_height="90dp"
-                                    android:src="@drawable/my"
+                                    android:src="@drawable/kamathpng"
                                     app:civ_shadow="true"
                                     app:civ_shadow_color="#3f51b5"
-                                    app:civ_shadow_radius="5" />
+                                    android:scaleType="centerInside"
+                                    app:civ_shadow_radius="5"
+                                    android:layout_marginLeft="20dp"
+                                    />
 
                                 <TextView
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
-                                    android:text="Faculty 2"
+                                    android:text="Shyam S Kamath "
                                     android:textStyle="bold"
                                     android:textColor="@color/contrasText"
-                                    android:layout_marginLeft="23dp"
+                                    android:layout_marginLeft="10dp"
 
                                     />
+                                <TextView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:text="HOD"
+                                    android:textColor="@color/contrasText"
+                                    android:layout_marginLeft="50dp"
 
+                                    />
 
                             </LinearLayout>
 
@@ -140,7 +161,7 @@
                             <LinearLayout
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:layout_margin="15dp"
+                                android:layout_margin="5dp"
                                 android:orientation="vertical"
 
                                 >
@@ -148,18 +169,28 @@
                                 <com.mikhaellopez.circularimageview.CircularImageView
                                     android:layout_width="90dp"
                                     android:layout_height="90dp"
-                                    android:src="@drawable/my"
+                                    android:src="@drawable/pushpraj"
                                     app:civ_shadow="true"
                                     app:civ_shadow_color="#3f51b5"
-                                    app:civ_shadow_radius="5" />
+                                    app:civ_shadow_radius="5"
+                                    android:layout_marginLeft="30dp"
+                                    />
 
                                 <TextView
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
-                                    android:text="Faculty 3"
+                                    android:text="Dr. D Pushpraj Shetty"
                                     android:textColor="@color/contrasText"
                                     android:textStyle="bold"
-                                    android:layout_marginLeft="28dp"
+                                    android:layout_marginLeft="10dp"
+
+                                    />
+                                <TextView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:text="Faculty Advisor"
+                                    android:textColor="@color/contrasText"
+                                    android:layout_marginLeft="30dp"
 
                                     />
 
@@ -242,18 +273,20 @@
                                 <com.mikhaellopez.circularimageview.CircularImageView
                                     android:layout_width="90dp"
                                     android:layout_height="90dp"
-                                    android:src="@drawable/my"
+                                    android:src="@drawable/praveen"
                                     app:civ_shadow="true"
                                     app:civ_shadow_color="#3f51b5"
+
 
                                     />
 
                                 <TextView
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
-                                    android:layout_marginLeft="23dp"
-                                    android:text="Pravin"
+                                    android:layout_marginLeft="19dp"
+                                    android:text="Praveen"
                                     android:textColor="@color/contrasText"
+
                                     android:textStyle="bold"
 
                                     />
@@ -261,7 +294,7 @@
                                 <TextView
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
-                                    android:layout_marginLeft="15dp"
+                                    android:layout_marginLeft="18dp"
                                     android:text="Convenor"
                                     android:textColor="@color/contrasText"
                                     android:layout_marginTop="5dp"
@@ -274,7 +307,7 @@
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:layout_marginLeft="0dp"
-                                    android:text="+91-8962727182"
+                                    android:text="+91-9893585279"
                                     android:layout_marginTop="5dp"
 
 
@@ -293,9 +326,10 @@
                                 <com.mikhaellopez.circularimageview.CircularImageView
                                     android:layout_width="90dp"
                                     android:layout_height="90dp"
-                                    android:src="@drawable/my"
+                                    android:src="@drawable/ac_st4sro"
                                     app:civ_shadow="true"
                                     app:civ_shadow_color="#3f51b5"
+                                    android:scaleType="centerInside"
                                     app:civ_shadow_radius="5" />
 
                                 <TextView
@@ -304,7 +338,7 @@
                                     android:layout_height="wrap_content"
                                     android:text="Avinabh"
                                     android:textStyle="bold"
-                                    android:layout_marginLeft="23dp"
+                                    android:layout_marginLeft="21dp"
 
                                     />
 
@@ -321,7 +355,7 @@
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:layout_marginTop="5dp"
-                                    android:text="+91-8962727182"
+                                    android:text="+91-8219996806"
 
                                     />
                             </LinearLayout>
@@ -338,8 +372,9 @@
                                 <com.mikhaellopez.circularimageview.CircularImageView
                                     android:layout_width="90dp"
                                     android:layout_height="90dp"
-                                    android:src="@drawable/my"
+                                    android:src="@drawable/arpit"
                                     app:civ_shadow="true"
+                                    android:scaleType="centerInside"
                                     app:civ_shadow_color="#3f51b5"
                                     app:civ_shadow_radius="5" />
 
@@ -370,7 +405,7 @@
                                     android:layout_height="wrap_content"
                                     android:layout_marginLeft="0dp"
                                     android:textColor="@color/contrasText"
-                                    android:text="+91-8962727182"
+                                    android:text="+91-8299250729"
                                     android:layout_marginTop="5dp"
 
 
@@ -398,8 +433,9 @@
                                 <com.mikhaellopez.circularimageview.CircularImageView
                                     android:layout_width="90dp"
                                     android:layout_height="90dp"
-                                    android:src="@drawable/my"
+                                    android:src="@drawable/jashleen"
                                     app:civ_shadow="true"
+                                    android:scaleType="centerCrop"
                                     app:civ_shadow_color="#3f51b5"
                                     app:civ_shadow_radius="5" />
 
@@ -429,7 +465,7 @@
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:layout_marginLeft="0dp"
-                                    android:text="+91-8962727182"
+                                    android:text="+91-9878766776"
                                     android:layout_marginTop="5dp"
 
 
@@ -448,7 +484,7 @@
                                 <com.mikhaellopez.circularimageview.CircularImageView
                                     android:layout_width="90dp"
                                     android:layout_height="90dp"
-                                    android:src="@drawable/my"
+                                    android:src="@drawable/ankit"
                                     app:civ_shadow="true"
                                     app:civ_shadow_color="#3f51b5"
                                     app:civ_shadow_radius="5" />
@@ -475,7 +511,7 @@
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:layout_marginLeft="0dp"
-                                    android:text="+91-8962727182"
+                                    android:text="+91-9650763204"
                                     android:layout_marginTop="5dp"
                                     android:textColor="@color/contrasText"
 
@@ -495,7 +531,7 @@
                                 <com.mikhaellopez.circularimageview.CircularImageView
                                     android:layout_width="90dp"
                                     android:layout_height="90dp"
-                                    android:src="@drawable/my"
+                                    android:src="@drawable/rc"
                                     app:civ_shadow="true"
                                     app:civ_shadow_color="#3f51b5"
                                     app:civ_shadow_radius="5" />
@@ -523,7 +559,7 @@
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:layout_marginLeft="0dp"
-                                    android:text="+91-8962727182"
+                                    android:text="+91-9575344691"
                                     android:layout_marginTop="5dp"
 
                                     />
